src/objects/Time_Frame__c.object
<CustomObject>
    <description>Records the time a record has been in a single status. Used in Complaint, Inspection. Will be used in license as well.</description>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>MUSW__Complaint2__c</referenceTo>
        <relationshipLabel>Time Frame</relationshipLabel>
        <relationshipName>Time_Frame</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(ISBLANK(End_Date__c),TODAY() - Start_Date__c, End_Date__c - Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Time Frame</relationshipLabel>
        <relationshipName>Time_Frame</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Time Frame</relationshipLabel>
        <relationshipName>Time_Frame</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intake</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Frame</label>
    <nameField>
        <label>Time Frame Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Frame</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>